Fix sidebar logo alignment

--- a/app/client/styles/nav.scss
+++ b/app/client/styles/nav.scss
@@ -17,10 +17,6 @@
     a {
       vertical-align: bottom;
     }
-    i {
-      position: relative;
-      top: 13px;
-    }
   }
 
   .head-5,
